--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="./query.css" />
-    <title>Dashboard UI</title>
+    <title>TO DO</title>
   </head>
   <body>
     <div class="app-container">
